--- a/my_tool/my_tool/my_tool.vcxproj
+++ b/my_tool/my_tool/my_tool.vcxproj
@@ -53,6 +53,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>D:\boost_1_60_0;./classes;./classes/application;./classes/common</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -81,11 +82,17 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="classes\application\Application.h" />
+    <ClInclude Include="classes\application\AppDelegate.h" />
+    <ClInclude Include="classes\common\Any.h" />
+    <ClInclude Include="classes\common\common.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="my_tool.cpp" />
+    <ClCompile Include="classes\application\Application.cpp" />
+    <ClCompile Include="classes\application\AppDelegate.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
