--- a/my_tool/my_tool/my_tool.vcxproj.filters
+++ b/my_tool/my_tool/my_tool.vcxproj.filters
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="源文件">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="classes">
+      <UniqueIdentifier>{d1fa7da0-d114-4dd7-ac78-31cfc8317d31}</UniqueIdentifier>
     </Filter>
-    <Filter Include="头文件">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
+    <Filter Include="main">
+      <UniqueIdentifier>{6b679b8a-f446-49db-84d7-400fabcf05df}</UniqueIdentifier>
     </Filter>
-    <Filter Include="资源文件">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="classes\application">
+      <UniqueIdentifier>{a1c791e1-ca36-4cd2-a370-5e559212fedc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="classes\common">
+      <UniqueIdentifier>{5d9b266e-03ec-45d0-8608-1d73793bc89c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -19,18 +19,36 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
-      <Filter>头文件</Filter>
+      <Filter>main</Filter>
     </ClInclude>
     <ClInclude Include="targetver.h">
-      <Filter>头文件</Filter>
+      <Filter>main</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\application\AppDelegate.h">
+      <Filter>classes\application</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\common\common.h">
+      <Filter>classes\common</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\application\Application.h">
+      <Filter>classes\application</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\common\Any.h">
+      <Filter>classes\common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="main.cpp">
+      <Filter>main</Filter>
     </ClCompile>
-    <ClCompile Include="my_tool.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>main</Filter>
+    </ClCompile>
+    <ClCompile Include="classes\application\AppDelegate.cpp">
+      <Filter>classes\application</Filter>
+    </ClCompile>
+    <ClCompile Include="classes\application\Application.cpp">
+      <Filter>classes\application</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
